--- a/Web-LinhKien/Areas/Admin/Views/Product/Create.cshtml
+++ b/Web-LinhKien/Areas/Admin/Views/Product/Create.cshtml
@@ -1,19 +1,54 @@
-﻿@page
-@model Web_LinkKien.Areas.Admin.Views.Product.Create
+﻿@model Web_LinhKien.Areas.Admin.Models.AdminProductViewModel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Thêm mới sản phẩm";
+    Layout = "_Layout";
 }
 
-<!DOCTYPE html>
+<h1>Thêm mới sản phẩm</h1>
 
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-<div>
-    
+<h4>Sản phẩm</h4>
+<hr />
+<div class="row">
+    <div class="col-md-6">
+        <form asp-action="Create" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group mb-3">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-3">
+                <label asp-for="Description" class="control-label"></label>
+                <textarea asp-for="Description" class="form-control" rows="3"></textarea>
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-3">
+                <label asp-for="Price" class="control-label"></label>
+                <input asp-for="Price" class="form-control" />
+                <span asp-validation-for="Price" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-3">
+                <label asp-for="ImageFile" class="control-label">Hình ảnh</label> @* Thêm lại Display Name ở đây nếu bạn muốn *@
+                <input type="file" asp-for="ImageFile" class="form-control" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-3">
+                <label asp-for="CategoryId" class="control-label"></label>
+                <select asp-for="CategoryId" class ="form-control" asp-items="Model.Categories"></select>
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Tạo mới" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
 </div>
-</body>
-</html>
+
+<div>
+    <a asp-action="Index">Quay lại danh sách</a>
+</div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
