--- a/Web-LinhKien/Views/Account/Login.cshtml
+++ b/Web-LinhKien/Views/Account/Login.cshtml
@@ -21,7 +21,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Đăng nhập</button>
-            <a asp-action="ForgotPassword" class="btn btn-link">Quên mật khẩu?</a>
+            <a asp-controller="Account" asp-action="ForgotPassword" class="btn btn-link">Quên mật khẩu?</a>
         </form>
     </div>
 </div>
