--- a/Web-LinhKien/Views/Shared/_Layout.cshtml
+++ b/Web-LinhKien/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿@* File: Views/Shared/_Layout.cshtml *@
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="utf-8" />
@@ -27,14 +25,18 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Sản phẩm</a>
                         </li>
                     </ul>
-                    <ul class="navbar-nav">
+                    
+                    @* <ul class="navbar-nav"> // Dòng này và khối bên dưới sẽ được thay thế
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Đăng nhập</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Đăng ký</a>
                         </li>
-                    </ul>
+                    </ul> *@
+
+                    <partial name="_LoginPartial" /> @* <-- ĐÃ THÊM DÒNG NÀY VÀO ĐÂY *@
+
                 </div>
             </div>
         </nav>
