--- a/Web-LinhKien/Areas/Admin/Views/Product/Create.cshtml
+++ b/Web-LinhKien/Areas/Admin/Views/Product/Create.cshtml
@@ -29,7 +29,7 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group mb-3">
-                <label asp-for="ImageFile" class="control-label">Hình ảnh</label> @* Thêm lại Display Name ở đây nếu bạn muốn *@
+                <label asp-for="ImageFile" class="control-label">Hình ảnh</label>
                 <input type="file" asp-for="ImageFile" class="form-control" />
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
